# smartMPLS-with-django

./: LICENSE  README.md
smart_mpls/: .dockerignore  Dockerfile  Dockerfile-dev  docker-compose-prod.yml  docker-compose.override.yml  docker-compose.yml  docker-composer.yml  docker-entrypoint.sh  entrypoint.sh  gunicorn.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  testconfig.py  testoutput  tmp.Dockerfile  wsgi.py
smart_mpls/mpls_manager/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
smart_mpls/mpls_manager/migrations/: 0001_initial.py  0002_auto_20200726_1438.py  0002_auto_20200729_1220.py  0003_auto_20200726_1921.py  0003_auto_20200729_1241.py  0004_auto_20200727_1641.py  0004_auto_20200730_0655.py  0005_auto_20200730_1134.py  0006_auto_20200730_1135.py  0007_auto_20200730_1218.py  0008_auto_20200730_1522.py  0009_auto_20200730_1522.py  0010_auto_20200731_0820.py
smart_mpls/mpls_monitor/: admin.py  apps.py  models.py  urls.py  views.py
smart_mpls/mpls_monitor/migrations/: 0001_initial.py  0002_auto_20200722_2101.py  0003_auto_20200722_2129.py  0004_auto_20200723_1005.py  0005_auto_20200724_1107.py  0006_auto_20200724_1204.py  0007_auto_20200724_1235.py  0008_auto_20200724_1307.py  0009_auto_20200724_1833.py  0010_auto_20200725_0754.py
smart_mpls/smart_mpls/: asgi.py  settings.py  urls.py  wsgi.py
smart_mpls/templates/: addVrf.html  addVrfinDevice.html  allvrf.html  base.html  devices.html  index.html  interface.html
smart_mpls/templates/manager/: index.html
smart_mpls/templates/monitoring/: index.html
(+59 files in other folders)
