[tool.poetry]
name = "smart_mpls"
version = "0.1.0"
description = "project PFE September 2020 (provisioning in network MPLS)"
authors = ["Ib Sangaré <sibrahima250@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.3"
netmiko = "^3.2.0"
paramiko = "^2.7.1"
django = "^3.1.9"
napalm = "^3.1.0"
textfsm = "^1.1.0"
terminal = "^0.4.0"
celery = "^4.4.7"
gevent = "^20.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
